--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -15,11 +15,10 @@
 {% block body %}
 <div class="main">
 	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+		<iframe frameborder="0" width="1000" height="3500" scrolling="no" src="http://sugoroku01.cn.pag-asia.com/index.php?point_uid=96&nickname=clauzu&key=51ebb3b41f89310ad9827a03170be3a41fb69082"></iframe> 
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/advertisement/game')}}"></script>
 {% endblock %}
 
 {% block footer %}
