--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/taskHistory.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/taskHistory.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/point.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -14,12 +14,84 @@
 
 {% block body %}
 <div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
-	</div>
+	<div class="main-personal w1000 clearfix">
+			<div class="main-personal-left left">
+				<h1>个人中心</h1>
+				<ul>
+					<li class="icon1"><a href="{{ path('wenwen_frontend_personal_profile') }}"><em></em>个人资料</a></li>
+					<li><a href="{{ path('wenwen_frontend_personal_message') }}"><em class="icon2"></em>我的消息</a></li>
+					<li class="active"><a href="{{ path('wenwen_frontend_personal_task') }}"><em></em>任务历史</a></li>
+					<li><a href="{{ path('wenwen_frontend_personal_exchange') }}"><em class="icon4"></em>兑换历史</a></li>
+					<li><a href="{{ path('wenwen_frontend_personal_account') }}"><em class="icon5"></em>账户设置</a></li>
+				</ul>
+			</div>
+			<div class="main-personal-right right">
+				<h2><div class="filter"><label for="">按时间筛选：</label><input type="text" class="laydate-icon">到<input type="text" class="laydate-icon"><span class="searchBtn">搜索</span></div>任务历史</h2>
+				<div class="main-personal-points">
+					<table>
+						<thead>
+							<tr>
+								<th>日期</th>
+								<th>名称</th>
+								<th>奖励积分</th>
+								<th>状态</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>2015-07-10</td>
+								<td>购物返利-京东商城</td>
+								<td>761</td>
+								<td>待确认</td>
+							</tr>
+							<tr>
+								<td>2015-07-10</td>
+								<td>q131 属性问卷</td>
+								<td>12</td>
+								<td>成功</td>
+							</tr>
+							<tr>
+								<td>2015-07-10</td>
+								<td>快速问答</td>
+								<td>1</td>
+								<td>成功</td>
+							</tr>
+							<tr>
+								<td>2015-07-10</td>
+								<td>购物返利-京东商城</td>
+								<td>761</td>
+								<td>待确认</td>
+							</tr>
+							<tr>
+								<td>2015-07-10</td>
+								<td>q131 属性问卷</td>
+								<td>12</td>
+								<td>成功</td>
+							</tr>
+							<tr>
+								<td>2015-07-10</td>
+								<td>快速问答</td>
+								<td>1</td>
+								<td>成功</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="page-wrapper">
+						<p class="page">
+							<span class="active">1</span>
+							<span>2</span>
+							<span>3</span>
+							<span>4</span>
+							<span>5</span>
+							<span>6</span>
+							<span>尾页</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/personal/point')}}"></script>
 {% endblock %}
 
 {% block footer %}
